<?xml version="1.0" encoding="utf-8"?>
<!-- This file is part of RandCity.
     Copyright (c) 2014 Fabien Caylus <toutjuste13@gmail.com>

     This file is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This file is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string translatable="false" name="app_name">Rand City</string>

    <string name="headerTitle">Main menu</string>
    <string name="header">Welcome to Rand City game, please choose your game mode.</string>
    <string name="testGameLabel">Test Mode with buttons to move</string>
    <string name="testGameSubtitle">Used for testings new the game when you don\'t have a VR helmet.</string>
    <string name="vrGameLabel">VR Mode</string>
    <string name="vrGameSubtitle">Wear your virtual reality helmet.</string>

    <string name="noOpenGLSupport">The device doesn\'t support OpenGL ES 2.0 !</string>

    <string translatable="false" name="left">L</string>
    <string translatable="false" name="right">R</string>
    <string translatable="false" name="forward">F</string>
    <string translatable="false" name="backward">B</string>
    <string translatable="false" name="up">U</string>
    <string translatable="false" name="down">D</string>

    <string name="fogEnable">Enable fog</string>
    <string name="fogDisable">Disable fog</string>
    <string name="fogOn">Fog enabled</string>
    <string name="fogOff">Fog disabled</string>

    <string name="checkBoxBluetooth">Enable Bluetooth to receive positions data</string>
    <string name="checkBoxBluetoothReset">Reset bluetooth on exit the app</string>

</resources>
